--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a04cccea",
+   "id": "d041d855",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9578ccb6",
+   "id": "d9bbc785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3e5a325c",
+   "id": "90f11815",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f08daa46",
+   "id": "a51b0250",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e93b1c7",
+   "id": "0cfd92b2",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f521319",
+   "id": "03a03398",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "87ee091f",
+   "id": "42988ce1",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88d5b550",
+   "id": "e97e3571",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ba79a030",
+   "id": "337af22f",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "535d6177",
+   "id": "46d8f090",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f2af72b0",
+   "id": "874352b3",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f84a8e38",
+   "id": "938d15e2",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "48172e2f",
+   "id": "8609e852",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "74968758",
+   "id": "b8bce359",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f3346b55",
+   "id": "e45b4c55",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5c90a84e",
+   "id": "ad30e800",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1327bc52",
+   "id": "2d635352",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "669a08a3",
+   "id": "1f43cfaf",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "1e27e57c",
+   "id": "da26b9a9",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "add1ef13",
+   "id": "1d593aa0",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "05a7e970",
+   "id": "d1e9663f",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "013581b4",
+   "id": "39b4a1b0",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ea2ab05b",
+   "id": "79ee1701",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5e70ac3e",
+   "id": "83a2c9e3",
    "metadata": {},
    "outputs": [
     {
@@ -532,13 +532,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "330a4fef",
+   "id": "fe5d3b61",
    "metadata": {},
    "outputs": [],
    "source": [
     "word=input('Write your favourite word: ')\n",
-    "wordtranslated\n",
-    "print ('In PigLatin your word would be {word-translated}')"
+    "word_translated=\n",
+    "if word[0]is int:\n",
+    "    print(word+)\n",
+    "\n",
+    "\n",
+    "print ('In PigLatin your word would be {word_translated}')"
    ]
   }
  ],
