--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "28bb5d6e",
+   "id": "f56f691c",
    "metadata": {},
    "outputs": [
     {
@@ -214,11 +214,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "615b1ddb",
+   "id": "c18b137f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "word = input ('Enter a word')"
+    "word = input ('Enter a word')\n",
+    "if s[0] = (a, e, i, o, u):\n",
+    "    "
    ]
   }
  ],
