--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c33d733d",
+   "id": "53264731",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "787ac958",
+   "id": "d38bfb75",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "829cbf58",
+   "id": "d3c26423",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "375e354f",
+   "id": "63c4ed5f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "40ed08d5",
+   "id": "7330151b",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "28d4f2c7",
+   "id": "26514c49",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2e4d2373",
+   "id": "b21c18f7",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4e69cd6b",
+   "id": "8adf5969",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "376b899c",
+   "id": "62bebc0c",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "35de7d4a",
+   "id": "b81b174d",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "5af02555",
+   "id": "135ef195",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "394619aa",
+   "id": "4c28a131",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8c5d480f",
+   "id": "0d41c200",
    "metadata": {},
    "outputs": [
     {
@@ -317,15 +317,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5053afed",
+   "id": "9ef50eda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "w1=computer\n",
-    "w2=pineapple\n",
-    "w3=orange\n",
-    "w4=elephant\n",
-    "w5=papaya\n",
+    "word=input(\"Write a wort to be translated\")\n",
+    "if word[0]\n",
     "\n"
    ]
   }
