--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5813ea56",
+   "id": "b23c1a79",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d5a17524",
+   "id": "57ab0cb9",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6ed7754b",
+   "id": "d3a7bc4e",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "54f35d4b",
+   "id": "58c7caff",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6db7a7c1",
+   "id": "de331b8e",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "ae746139",
+   "id": "a0c61553",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "1c224f66",
+   "id": "2a47f72a",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "836dc233",
+   "id": "2ae47e0c",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "627439a9",
+   "id": "46857f12",
    "metadata": {},
    "outputs": [
     {
@@ -287,13 +287,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c02548d9",
+   "id": "e33d6b60",
    "metadata": {},
    "outputs": [],
    "source": [
     "word=input('please enter a word ')\n",
     "if word[0] == 'a':\n",
-    "    "
+    "    print(f'{word + 'way'}')\n",
+    "else:\n",
+    "    print(f'{word[1:]}')"
    ]
   }
  ],
