--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8fc2b1ed",
+   "id": "2b0fe477",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "088a7b0d",
+   "id": "8f38e9d9",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "362c4a8e",
+   "id": "8cbffcdf",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "50e5605d",
+   "id": "789895be",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ebfa96a9",
+   "id": "ef5c5b9d",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a9e3bf6",
+   "id": "b317e89b",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4b668e86",
+   "id": "0465c261",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a748134f",
+   "id": "c866fff1",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fd03101",
+   "id": "46315626",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50a77d5f",
+   "id": "bf0a62ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7a8aec59",
+   "id": "ec0530de",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5e695952",
+   "id": "e4ec6555",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "6267b5c2",
+   "id": "ae6a43cd",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "831c8e7f",
+   "id": "cd13e946",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73ee980",
+   "id": "0ab53129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,20 +308,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "24988b07",
+   "execution_count": 103,
+   "id": "9b437884",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: air\n",
+      "a\n",
+      "i\n"
+     ]
+    }
+   ],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
-    "print(firstletter)"
+    "print(firstletter)\n",
+    "\n",
+    "if firstletter == \"a\" or \"e\" or \"i\" or \"u\":\n",
+    "    print(f\"{word[:]}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "082d90f6",
+   "id": "93023665",
    "metadata": {},
    "outputs": [],
    "source": []
