--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "55ef097f",
+   "id": "e6a72dde",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "7880383b",
+   "id": "df33765a",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "b7d389bf",
+   "id": "5c76e0ed",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "872d059a",
+   "id": "f797f459",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "fa388373",
+   "id": "c52c931f",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "9c99a79d",
+   "id": "772640f0",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "12e1a018",
+   "id": "cb213b88",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "424a9ae5",
+   "id": "2f649e90",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7f8eaa2d",
+   "id": "109f1468",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "bbbf0779",
+   "id": "85de8cb9",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "295e6220",
+   "id": "8500858b",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "add16cf2",
+   "id": "d8cf18b2",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "ccd58955",
+   "id": "d25157de",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "780a787f",
+   "id": "51413883",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "99b4bcdb",
+   "id": "ededc8b3",
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "3dae96fa",
+   "id": "8ab853ad",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "de7acc0f",
+   "id": "d7e2adca",
    "metadata": {},
    "outputs": [
     {
@@ -698,19 +698,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b4d20e9",
+   "id": "a08e7922",
    "metadata": {},
    "outputs": [],
    "source": [
     "s = 'abcdefghijklmnopqrstuvwxyz'\n",
     "user = input('Enter a string: ')\n",
-    "s"
+    "s1 = 'aeiou'\n",
+    "s1 = s1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44143df7",
+   "id": "b060b63a",
    "metadata": {},
    "outputs": [],
    "source": []
