--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e143408d",
+   "id": "215c5c64",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "dcc8574c",
+   "id": "46022728",
    "metadata": {},
    "outputs": [
     {
@@ -205,21 +205,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4aba2689",
+   "execution_count": 56,
+   "id": "73576ce6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write a word: excuse\n",
+      "Your word in Pig latim would be: excuseway\n"
+     ]
+    }
+   ],
    "source": [
     "s = input('Write a word: ')\n",
     "if s[0] == 'a' or s[0] == 'e' or s[0] == 'i' or s[0] == 'o' or s[0] == 'u':\n",
     "    s += 'way'\n",
+    "    print(f'Your word in Pig latim would be: {s}')\n",
+    "else:\n",
+    "    s = s[1:]+s[0]+'ay'\n",
     "    print(f'Your word in Pig latim would be: {s}')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b66e7f",
+   "id": "1141f971",
    "metadata": {},
    "outputs": [],
    "source": []
