--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53264731",
+   "id": "42e690f0",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d38bfb75",
+   "id": "6512f84c",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d3c26423",
+   "id": "28516821",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63c4ed5f",
+   "id": "87ecda68",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7330151b",
+   "id": "956f9123",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "26514c49",
+   "id": "1a332364",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b21c18f7",
+   "id": "3df21344",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8adf5969",
+   "id": "f542b93b",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "62bebc0c",
+   "id": "2b2b2683",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b81b174d",
+   "id": "613c5630",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "135ef195",
+   "id": "d63fb539",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4c28a131",
+   "id": "15a84fdb",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "0d41c200",
+   "id": "7b44e424",
    "metadata": {},
    "outputs": [
     {
@@ -317,12 +317,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ef50eda",
+   "id": "653057b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "word=input(\"Write a wort to be translated\")\n",
-    "if word[0]\n",
+    "if word[0]==a or word[0]==e or word[0]==i or xword[0]==o or word[0]==u\n",
+    "    print(word + way\n",
+    "else\n",
     "\n"
    ]
   }
