--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23c1a79",
+   "id": "598ddf43",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "57ab0cb9",
+   "id": "2676f0cc",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d3a7bc4e",
+   "id": "274b1de2",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "58c7caff",
+   "id": "f3a7cf41",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "de331b8e",
+   "id": "673bc9c8",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a0c61553",
+   "id": "2e9f7d6c",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2a47f72a",
+   "id": "078c156d",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2ae47e0c",
+   "id": "ec3df8e9",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "46857f12",
+   "id": "e80cecff",
    "metadata": {},
    "outputs": [
     {
@@ -286,17 +286,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e33d6b60",
+   "execution_count": 82,
+   "id": "4d0c3f25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter a word sma\n",
+      "masay\n"
+     ]
+    }
+   ],
    "source": [
     "word=input('please enter a word ')\n",
-    "if word[0] == 'a':\n",
+    "if word[0] == 'a' or word[0] == 'e' or word[0] == \"\":\n",
     "    print(f'{word + 'way'}')\n",
+    "    \n",
     "else:\n",
-    "    print(f'{word[1:]}')"
+    "    print(f'{word[1:] + word[0] + \"ay\"}')\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06fb5422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
