--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3576dc56",
+   "id": "22c79bd7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bbc8427b",
+   "id": "a8a4cbbb",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692a1531",
+   "id": "a0b1b552",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57b5bd09",
+   "id": "14812fad",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b66b845",
+   "id": "be674cd7",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a18c704b",
+   "id": "e3ca8282",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8e0cefaa",
+   "id": "3f9826ee",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4d892fdc",
+   "id": "ee4f2f1e",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8a3ebcae",
+   "id": "de079af7",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1c935c3a",
+   "id": "9f2c3b1b",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1b3a7cb2",
+   "id": "0aeb7595",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8fc65287",
+   "id": "3a15104a",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ea3505e5",
+   "id": "00479f10",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0f35bec1",
+   "id": "ba257aed",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ee23f2cc",
+   "id": "8879f567",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "1444d430",
+   "id": "053c3377",
    "metadata": {},
    "outputs": [
     {
@@ -360,14 +360,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0062fb01",
+   "execution_count": 87,
+   "id": "f362b540",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: udas\n",
+      "u\n"
+     ]
+    }
+   ],
    "source": [
     "w = input('Enter a word: ')\n",
     "#or w[0]=='i' or w[0]=='o' oe w[0]=='u')\n",
-    "if w[0] == 'a' or w[0] == 'e':\n",
+    "if w[0] == 'a' or w[0] == 'e' or w[0]=='i'or w[0]=='o' or w[0]=='u':\n",
+    "    fir\n",
+    "    \n",
     "    print(w[0])\n",
     "    "
    ]
@@ -375,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34df0353",
+   "id": "6dd70444",
    "metadata": {},
    "outputs": [],
    "source": []
