--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1d4c856a",
+   "id": "9c99676a",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2af9304e",
+   "id": "945963c2",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "025b0996",
+   "id": "e6784b1e",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec00a1eb",
+   "id": "35614a9b",
    "metadata": {},
    "source": [
     "to jest opis"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "59f6ea2b",
+   "id": "aae97e88",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8d9912e7",
+   "id": "ff0f211c",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8e9ca1c9",
+   "id": "60e4ac7f",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6bdcdb67",
+   "id": "82265a04",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9b0d84c9",
+   "id": "e9722fc3",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "97b38637",
+   "id": "74055d42",
    "metadata": {},
    "outputs": [
     {
@@ -227,42 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "af362553",
+   "execution_count": 68,
+   "id": "6ad82280",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the word : orange\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'txt' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[63], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m txt1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124menter the word : \u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mtxt\u001b[49m[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m txt[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m txt[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mi\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m txt[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m txt[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mu\u001b[39m\u001b[38;5;124m'\u001b[39m :\n\u001b[1;32m      3\u001b[0m     txt1 \u001b[38;5;241m=\u001b[39m txt1 \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mway\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m :\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'txt' is not defined"
+      "enter the word : computer\n",
+      "omputercay\n"
      ]
     }
    ],
    "source": [
     "txt1 = input('enter the word : ')\n",
-    "if txt[0] == 'a' or txt[0] == 'e' or txt[0] == 'i' or txt[0] == 'o' or txt[0] == 'u' :\n",
+    "if txt1[0] == 'a' or txt1[0] == 'e' or txt1[0] == 'i' or txt1[0] == 'o' or txt1[0] == 'u' :\n",
     "    txt1 = txt1 + 'way'\n",
     "else :\n",
-    "    txt1 = txt1[1:len(txt1)-1]+txt1[0]+'ay'\n",
+    "    txt1 = txt1[1:len(txt1)]+txt1[0]+'ay'\n",
     "print (txt1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4281aef",
+   "id": "17d2d60c",
    "metadata": {},
    "outputs": [],
    "source": [
