--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b0fe477",
+   "id": "8b430802",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8f38e9d9",
+   "id": "a4c416eb",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cbffcdf",
+   "id": "c9ca37f8",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "789895be",
+   "id": "3f81a2b7",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ef5c5b9d",
+   "id": "39fb9fd8",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b317e89b",
+   "id": "5a5173b7",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0465c261",
+   "id": "347d2a0d",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "c866fff1",
+   "id": "f7b8d422",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46315626",
+   "id": "01e06aad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0a62ad",
+   "id": "fb1c2401",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ec0530de",
+   "id": "09a1d851",
    "metadata": {
     "scrolled": true
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e4ec6555",
+   "id": "eaf27743",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "ae6a43cd",
+   "id": "d3633206",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "cd13e946",
+   "id": "1cd58f9c",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ab53129",
+   "id": "f45acd1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,33 +308,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "9b437884",
+   "execution_count": null,
+   "id": "362b92f5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a word: air\n",
-      "a\n",
-      "i\n"
+      "Enter a word: airplane\n"
      ]
     }
    ],
    "source": [
     "word = input(\"Enter a word: \")\n",
     "firstletter = word[0]\n",
-    "print(firstletter)\n",
     "\n",
-    "if firstletter == \"a\" or \"e\" or \"i\" or \"u\":\n",
-    "    print(f\"{word[:]}\")"
+    "if firstletter != \"a\" or \"e\" or \"i\" or \"u\":\n",
+    "    print(f\"{word[-(len(word)-1):]}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93023665",
+   "id": "abf6856c",
    "metadata": {},
    "outputs": [],
    "source": []
