--- a/Sara_Sept 2nd, 2024.ipynb
+++ b/Sara_Sept 2nd, 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "643a70ed",
+   "id": "ca10e4c3",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b6c63c74",
+   "id": "804a3779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3c6ca05",
+   "id": "e547d7a0",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7ada5771",
+   "id": "8630854d",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "de128bc6",
+   "id": "26b6120d",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db3002d",
+   "id": "591530f0",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c13dd425",
+   "id": "3b5f26f8",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b475bf27",
+   "id": "86d903c8",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9263b865",
+   "id": "87682cb3",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aff08b73",
+   "id": "527e0708",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "30e6092c",
+   "id": "70aeec5e",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "62ced432",
+   "id": "8c407acd",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "584ac280",
+   "id": "cf427ca7",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f5556dca",
+   "id": "bf07b49b",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4413389f",
+   "id": "013dc025",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cb0f1bfe",
+   "id": "26e0272b",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bd081a3b",
+   "id": "4c245dfa",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "88fbbc43",
+   "id": "e1571cd5",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2022bca4",
+   "id": "91b1b25d",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "733979e5",
+   "id": "eb41088f",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "50366f88",
+   "id": "e03aa7e9",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "420611ff",
+   "id": "f447da74",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "cd913ef8",
+   "id": "acecb7bf",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "ebf2bef6",
+   "id": "5f86a534",
    "metadata": {},
    "outputs": [
     {
@@ -531,16 +531,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "667a867b",
+   "execution_count": 85,
+   "id": "6290d509",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2520277913.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[81], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    print (word[]+word[0]+ay)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write your favourite word: sunshine\n",
+      "usay\n"
      ]
     }
    ],
@@ -550,15 +550,13 @@
     "if word[0]is int:\n",
     "    print(word+way)\n",
     "elif word[0] is not int:\n",
-    "    print (word[]+word[0]+ay)\n",
-    "\n",
-    "print ('In PigLatin your word would be {word_translated}')"
+    "    print (word[-(len(word)-1)]+word[0]+'ay')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca1bd7d",
+   "id": "ff1ae7a5",
    "metadata": {},
    "outputs": [],
    "source": []
