--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ba71c338",
+   "id": "83c151be",
    "metadata": {},
    "outputs": [
     {
@@ -213,8 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "132bc700",
+   "execution_count": 60,
+   "id": "cfaa49f6",
    "metadata": {},
    "outputs": [
     {
@@ -223,29 +223,18 @@
      "text": [
       "Enter a wordahmed\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[58], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m word \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a word\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m word[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m==\u001b[39m (\u001b[43ma\u001b[49m, e, i, o, u):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m (word\u001b[38;5;241m=\u001b[39mway\u001b[38;5;241m+\u001b[39ms)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
     }
    ],
    "source": [
     "word = input ('Enter a word')\n",
-    "if word[0] == ('a, e, i, o, u):\n",
-    "    print (word=way+s)"
+    "if word[0] == ('a, e, i, o, u'):\n",
+    "    print (word=='way+s')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f6d2997",
+   "id": "c05c6384",
    "metadata": {},
    "outputs": [],
    "source": []
