--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "42e690f0",
+   "id": "4cac97d7",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6512f84c",
+   "id": "23b5663f",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "28516821",
+   "id": "1fbd7ead",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "87ecda68",
+   "id": "03450602",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "956f9123",
+   "id": "039902d5",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "1a332364",
+   "id": "574bf594",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "3df21344",
+   "id": "a8169c55",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f542b93b",
+   "id": "0593d0fd",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2b2b2683",
+   "id": "c1a2d733",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "613c5630",
+   "id": "2c6cc75e",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d63fb539",
+   "id": "7c2af1b3",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "15a84fdb",
+   "id": "f92250dc",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "7b44e424",
+   "id": "92b59ff0",
    "metadata": {},
    "outputs": [
     {
@@ -317,14 +317,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653057b6",
+   "id": "18764f41",
    "metadata": {},
    "outputs": [],
    "source": [
     "word=input(\"Write a wort to be translated\")\n",
     "if word[0]==a or word[0]==e or word[0]==i or xword[0]==o or word[0]==u\n",
-    "    print(word + way\n",
+    "    print(word + \"way\")\n",
     "else\n",
+    "    translated=\n",
+    "    print()\n",
     "\n"
    ]
   }
